:icons: font
:linkattrs: 
:imagesdir: ../media/


[role="lead"]
NetApp aggiorna periodicamente l'API REST di ONTAP per offrire nuove funzionalità, miglioramenti e correzioni di bug.


TIP: È inoltre necessario esaminare https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508["Note di rilascio di ONTAP"^] per ulteriori informazioni, incluse limitazioni o problemi noti.



== ONTAP 9.15.1

ONTAP 9.15.1 continua a espandere le funzionalità dell'API REST ONTAP. L'aggiornamento per questa versione è relativamente modesto, con tre nuovi endpoint che supportano una nuova funzionalità.

NFS su TLS:: Con questa funzione sono disponibili tre nuovi endpoint. È possibile eseguire queste chiamate API per recuperare tutte le interfacce NFS su TLS, recuperare un'interfaccia specifica tramite UUID e aggiornare le proprietà di configurazione per un'interfaccia TLS. Collettivamente, queste chiamate API forniscono un equivalente all'insieme di `vserver nfs tls interface` Comandi CLI.



CAUTION: NFS over TLS è disponibile in ONTAP 9.15.1 come anteprima pubblica. Come offerta di anteprima, questa funzionalità non è supportata per i carichi di lavoro di produzione con ONTAP 9.15.1.



== ONTAP 9.14.1

La versione ONTAP 9.14.1 include oltre tre dozzine di nuove chiamate API che continuano ad espandere le funzionalità dell'API REST ONTAP. Questi endpoint supportano diverse nuove funzionalità di ONTAP e aggiornamenti alle funzionalità esistenti. Questa release si concentra principalmente sui miglioramenti alla sicurezza, ma include anche miglioramenti alle metriche NAS, QOS e delle performance.
