@@ -381,7 +381,6 @@
   <block id="494abb7dd5b763270d790ff3ee48084d" category="paragraph-title">NetBIOS CIFS</block>
   <block id="c775568e4d8c67f72b663a73cb197aba" category="paragraph">È possibile visualizzare informazioni sulle connessioni NetBIOS del cluster. I dettagli includono gli indirizzi IP e i nomi NetBIOS registrati. Queste informazioni consentono di risolvere i problemi di risoluzione dei nomi. Questo tipo di risorsa è stato introdotto con ONTAP 9.11.1.</block>
   <block id="b4aed1589395fdc65c17587b27f7bb8c" category="paragraph-title">Servizi CIFS</block>
-  <block id="55b828992334f8fd2faac07a1d3c6e1e" category="paragraph">La configurazione principale del server CIFS. Questo tipo di risorsa è stato introdotto con ONTAP 9.6 e aggiornato con ONTAP 9.7.</block>
   <block id="ef5c06085d29fcbcb6138c9c185bda09" category="paragraph-title">File di sessione CIFS</block>
   <block id="7c652b32ce4519406f03f09a9ce29110" category="paragraph">È possibile recuperare un elenco di file aperti per le sessioni CIFS in base a diverse opzioni di filtraggio. Questo tipo di risorsa è stato introdotto con ONTAP 9.11.1.</block>
   <block id="bc60013b8245b6824eb1f7867b61b741" category="paragraph-title">Sessioni CIFS</block>
@@ -1915,7 +1914,6 @@
   <block id="f3d744cfa0520002045d6f43144f6d48" category="list-text"><block ref="f3d744cfa0520002045d6f43144f6d48" category="inline-link-rx"></block></block>
   <block id="430f1c1df2cd64a3c4f965b8d9c49566" category="list-text"><block ref="430f1c1df2cd64a3c4f965b8d9c49566" category="inline-link-rx"></block></block>
   <block id="35edae61aca91aae4cbd46b48209e29c" category="list-text"><block ref="35edae61aca91aae4cbd46b48209e29c" category="inline-link-rx"></block></block>
-  <block id="6a7c5e7366ffed370462b891c0a9ae2c" category="paragraph">ONTAP 9.15.1 continua a espandere le funzionalità dell'API REST ONTAP. L'aggiornamento per questa versione è relativamente modesto, con tre nuovi endpoint che supportano una nuova funzionalità.</block>
   <block id="f503cec406370353472f2af8bffc177d" category="list-text">Con questa funzione sono disponibili tre nuovi endpoint. È possibile eseguire queste chiamate API per recuperare tutte le interfacce NFS su TLS, recuperare un'interfaccia specifica tramite UUID e aggiornare le proprietà di configurazione per un'interfaccia TLS. Collettivamente, queste chiamate API forniscono un equivalente all'insieme di<block ref="e06252ee7104d7c63fe9612305d61ed2" prefix=" " category="inline-code"></block> Comandi CLI.</block>
   <block id="9fca2ad29082aa8ea692f5764bcc5371" category="admonition">NFS over TLS è disponibile in ONTAP 9.15.1 come anteprima pubblica. Come offerta di anteprima, questa funzionalità non è supportata per i carichi di lavoro di produzione con ONTAP 9.15.1.</block>
   <block id="b302321652be9f7bc5eab2d6b2eb58f6" category="sidebar">Puoi automatizzare l'installazione e l'amministrazione dei tuoi sistemi storage ONTAP utilizzando una delle diverse opzioni disponibili. L'API REST ONTAP costituisce la base primaria per le tecnologie di automazione.</block>
@@ -1931,4 +1929,8 @@
   <block id="34a5cab8543c50812e1e9045207ef342" category="sidebar">Documenti ONTAP Select</block>
   <block id="9a48142f39a67f56da7343e45f9a5f6a" category="paragraph">Sono disponibili due opzioni per scaricare e installare il toolkit PowerShell di NetApp ONTAP.</block>
   <block id="d61a36a5306e6c21551315a0807bb00a" category="paragraph">Il NetApp. Il toolkit per PowerShell di ONTAP include il modulo PowerShell per NetApp ONTAP. Il toolkit supporta ONTAP in esecuzione in una varietà di ambienti, tra cui sistemi NetApp AFF e FAS, commodity hardware e cloud. Il modulo include oltre 2.400 cmdlet che supportano collettivamente l'amministrazione dello storage sugli host Windows.</block>
+  <block id="7e20d550033609efe814483eaca98482" category="paragraph">La configurazione principale del server CIFS. Questo tipo di risorsa è stato introdotto con ONTAP 9.6 e aggiornato con ONTAP 9.7 e 9.15.</block>
+  <block id="25c2f3f417194f8a4327550b96839461" category="paragraph">ONTAP 9.15.1 continua a espandere le funzionalità dell'API REST ONTAP. L'aggiornamento per questa versione è relativamente modesto con il supporto di due nuove funzionalità.</block>
+  <block id="df1b9eeca7fff049392b594c09b8d79c" category="list-text">Applicazioni di backup di Windows e collegamenti simbolici in stile Unix</block>
+  <block id="a2edd73d4869c496dcb1c490b5fbe188" category="list-text">Quando un'applicazione di backup di Windows incontra un collegamento simbolico in stile Unix (link simbolico), il collegamento viene attraversato e i dati vengono restituiti da ONTAP e sottoposti a backup. A partire da ONTAP 9.15.1, è anche possibile eseguire il backup del collegamento simbolico anziché dei dati a cui punta. Questo può fornire diversi vantaggi, tra cui il miglioramento delle prestazioni delle applicazioni di backup. L'endpoint<block ref="232f6f2dc030d628eaaa90ce3e0c958c" prefix=" " category="inline-code"></block> è stato aggiornato per includere il nuovo parametro<block ref="4d13b3f008fbbaa256c8235439cea789" prefix=" " category="inline-code"></block> nell'<block ref="93da65a9fd0004d9477aeac024e08e15" prefix=" " category="inline-code"></block> oggetto.</block>
 </blocks>
