@@ -23,13 +23,16 @@ TIP: È inoltre necessario esaminare https://library.netapp.com/ecm/ecm_download
 
 == ONTAP 9.15.1
 
-ONTAP 9.15.1 continua a espandere le funzionalità dell'API REST ONTAP. L'aggiornamento per questa versione è relativamente modesto, con tre nuovi endpoint che supportano una nuova funzionalità.
+ONTAP 9.15.1 continua a espandere le funzionalità dell'API REST ONTAP. L'aggiornamento per questa versione è relativamente modesto con il supporto di due nuove funzionalità.
 
 NFS su TLS:: Con questa funzione sono disponibili tre nuovi endpoint. È possibile eseguire queste chiamate API per recuperare tutte le interfacce NFS su TLS, recuperare un'interfaccia specifica tramite UUID e aggiornare le proprietà di configurazione per un'interfaccia TLS. Collettivamente, queste chiamate API forniscono un equivalente all'insieme di `vserver nfs tls interface` Comandi CLI.
 
 
 
 CAUTION: NFS over TLS è disponibile in ONTAP 9.15.1 come anteprima pubblica. Come offerta di anteprima, questa funzionalità non è supportata per i carichi di lavoro di produzione con ONTAP 9.15.1.
+
+Applicazioni di backup di Windows e collegamenti simbolici in stile Unix:: Quando un'applicazione di backup di Windows incontra un collegamento simbolico in stile Unix (link simbolico), il collegamento viene attraversato e i dati vengono restituiti da ONTAP e sottoposti a backup. A partire da ONTAP 9.15.1, è anche possibile eseguire il backup del collegamento simbolico anziché dei dati a cui punta. Questo può fornire diversi vantaggi, tra cui il miglioramento delle prestazioni delle applicazioni di backup. L'endpoint `/protocols/cifs/services/{svm.uuid}` è stato aggiornato per includere il nuovo parametro `backup-symlink-enabled` nell' `options` oggetto.
+
 
 
 
